191023 | revise django_practice_2

--- a/04_django/django_pracitce_2/requirements.txt
+++ b/04_django/django_pracitce_2/requirements.txt
@@ -1,27 +1,17 @@
 astroid==2.3.1
-backcall==0.1.0
 beautifulsoup4==4.8.1
 colorama==0.4.1
-decorator==4.4.0
 Django==2.2.6
+django-bootstrap==0.2.4
 django-bootstrap4==1.0.1
 django-extensions==2.2.3
-ipython==7.8.0
-ipython-genutils==0.2.0
 isort==4.3.21
-jedi==0.15.1
 lazy-object-proxy==1.4.2
 mccabe==0.6.1
-parso==0.5.1
-pickleshare==0.7.5
-prompt-toolkit==2.0.10
-Pygments==2.4.2
 pylint==2.4.2
 pytz==2019.3
 six==1.12.0
 soupsieve==1.9.4
 sqlparse==0.3.0
-traitlets==4.3.3
 typed-ast==1.4.0
-wcwidth==0.1.7
 wrapt==1.11.2
