--- a/08_react/03_react-router/react-router/package.json
+++ b/08_react/03_react-router/react-router/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-algorithm-list",
+  "name": "react-router",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
