--- a/08_react/02_zerocho-react/01_gugudan/package.json
+++ b/08_react/02_zerocho-react/01_gugudan/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "02_word-relay",
+  "name": "01_gugudan",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot"
+    "dev": "webpack"
   },
   "author": "wally-wally",
   "license": "MIT",
@@ -14,13 +14,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "react-hot-loader": "^4.12.21",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^3.3.12"
   }
 }
