201118 | apply for vuex at vue_trello

--- a/07_vue/07_vue_trello/lecture-vue-trello/package.json
+++ b/07_vue/07_vue_trello/lecture-vue-trello/package.json
@@ -2,7 +2,7 @@
   "name": "lecture-vue-trello",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "김정환 <ej88ej@gmail.com>",
+  "author": "",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "vue": "^2.5.11",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.5.1"
   },
   "browserslist": [
     "> 1%",
