--- a/07_vue/07_vue_trello/lecture-vue-trello/package.json
+++ b/07_vue/07_vue_trello/lecture-vue-trello/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "dragula": "^3.7.3",
     "vue": "^2.5.11",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1"
