211010 | add react hook introduction

--- a/08_react/05_react_with_ts/02_hook_introduction/package.json
+++ b/08_react/05_react_with_ts/02_hook_introduction/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01_getting_started",
+  "name": "02_hook_introduction",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
