--- a/09_ts/05_ts-all-in-one/package.json
+++ b/09_ts/05_ts-all-in-one/package.json
@@ -10,6 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.6.4",
+    "react": "^18.2.0",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "@types/react": "^18.0.28"
   }
 }
